<resources>
    <string name="app_name">Reverse Image Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">
        Welcome to the Image Reverse Search!
        To begin, upload an image from your phone - then click "SEARCH"
        If you want to save your findings, select the image and click "SAVE".
        You will find your saved images in the "save" button.
    </string>
    <string name="search">SEARCH</string>
    <string name="upload">UPLOAD</string>
    <string name="saved">SAVED</string>
    <string name="image_from_upload">Image from upload</string>
    <string name="help">Help</string>
    <string name="fragment_search">Upload Image</string>
    <string name="fragment_result">Search Result</string>
    <string name="crop_image">CROP IMAGE</string>
    <string name="finish_cropping">CROP</string>
    <string name="camera">CAMERA</string>
    <string name="save_search_result">Save search result</string>
    <string name="loading">Loading…</string>
    <string name="upload_image">Upload Image</string>
    <string name="saved_collections">Saved Collections</string>
    <string name="search_results">Search Results</string>
    <string name="back">BACK</string>
    <string name="gallery">GALLERY</string>
    <string name="saved_collections_images">Saved images in Collection</string>
    <string name="image_of_collection">Image of collection</string>
    <string name="image_of_search_result">Image of search result</string>
    <string name="image_of_image_in_collection">Image of image in collection</string>
</resources>